@@ -1,3 +1,10 @@
+2007-04-16  Jens Granseuer  <jensgr@gmx.net>
+
+	Patch by: Erich Schubert <erich@debian.org>
+
+	* applier.c: (get_geometry): fix scaling for WPTYPE_ZOOM. Fixes
+	bug #342356.
+
 2007-01-08  Rodney Dawes  <dobey@novell.com>
 
 	* preferences.c (bg_preferences_merge_entry):
